pantallas
acomodo de pantallas para que se centren al desplegarse